[package]
name = "test-contract-type-serialization"
version = "0.0.0"
authors = ["Unc Inc <hello@uncprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5"
unc-sdk = "0.7.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
